--- a/views/index.erb
+++ b/views/index.erb
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <!-- Template by html.am -->
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Sinatra Example - Cloud Foundry</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Sinatra Example - Cloud Foundry</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-	<body>
-		<header id="header">
-			<div class="innertube">
-				<h1>Ruby/Sinatra Example - Cloud Foundry</h1>
-			</div>
-		</header>
+<body>
+<header id="header">
+  <div class="innertube">
+    <h1>Ruby/Sinatra Example - Cloud Foundry</h1>
+  </div>
+</header>
 
-		<div id="wrapper">
-			<main>
-				<div id="content">
-					<div class="innertube">
-						<h2>IP: <%= @host %> - Port: <%= @port %> - DEA Index: <%= @index %></h2>
-						<img src="https://lh5.googleusercontent.com/-aDaxlU0CssE/AAAAAAAAAAI/AAAAAAAABo4/HbWBRIZ_lK8/photo.jpg"></img>
-						<img src="http://www.altoros.com/cflive/wp-content/uploads/2015/04/cloud-foundry-logo.png"></img>
+<div id="wrapper">
+  <main>
+    <div id="content">
+      <div class="innertube">
+        <h2>IP: <%= @host %> - Port: <%= @port %> - DEA Index: <%= @index %></h2>
+        <img src="https://lh5.googleusercontent.com/-aDaxlU0CssE/AAAAAAAAAAI/AAAAAAAABo4/HbWBRIZ_lK8/photo.jpg"></img>
+        <img src="http://www.altoros.com/cflive/wp-content/uploads/2015/04/cloud-foundry-logo.png"></img>
+        <div class="dbinfo">
+            <h3>Connected to the MySQL <%= @db_name %> database</h3>
+            <h4>Tables in the INFORMATION SCHEMA</h4>
+            <ul>
+              <% @query_result.each do |row| %>
+                  <li><%= row['table_name'] %></li>
+              <% end %>
+            </ul>
+        </div>
+      </div>
+    </div>
+  </main>
+</div>
 
-					</div>
-				</div>
-			</main>
-		</div>
+<footer id="footer">
+  <div class="innertube">
+    <p>Altoros Training</p>
+  </div>
+</footer>
 
-		<footer id="footer">
-			<div class="innertube">
-				<p>Altoros Training</p>
-			</div>
-		</footer>
-
-	</body>
+</body>
 </html>
