--- a/views/index.erb
+++ b/views/index.erb
@@ -19,7 +19,7 @@
 				<div id="content">
 					<div class="innertube">
 						<h2>IP: <%= @host %> - Port: <%= @port %> - DEA Index: <%= @index %></h2>
-						<img src="https://lh5.googleusercontent.com/-aDaxlU0CssE/AAAAAAAAAAI/AAAAAAAABo4/HbWBRIZ_lK8/photo.jpg"></img>
+						<img src="https://lh6.googleusercontent.com/-b9BB0T8Cy-4/AAAAAAAAAAI/AAAAAAAAA9U/biLumWYc-MM/photo.jpg"></img>
 						<img src="http://www.altoros.com/cflive/wp-content/uploads/2015/04/cloud-foundry-logo.png"></img>
 
 					</div>
@@ -29,7 +29,7 @@
 
 		<footer id="footer">
 			<div class="innertube">
-				<p>Altoros Training</p>
+				<p>SUSECON 16</p>
 			</div>
 		</footer>
 
