--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,7 @@
 	<body>
 		<header id="header">
 			<div class="innertube">
-				<h1>Ruby/Sinatra Example - Cloud Foundry</h1>
+				<h1>Ruby/Sinatra Example - SUSE Cloud Application Platform</h1>
 			</div>
 		</header>
 
@@ -29,7 +29,7 @@
 
 		<footer id="footer">
 			<div class="innertube">
-				<p>SUSECON 16</p>
+				<p>SUSECON Nashville '19</p>
 			</div>
 		</footer>
 
