--- a/views/index.erb
+++ b/views/index.erb
@@ -18,7 +18,7 @@
 			<main>
 				<div id="content">
 					<div class="innertube">
-						<h2>IP: <%= @host %> - Port: <%= @port %> - DEA Index: <%= @index %></h2>
+						<h2>IP: <%= @host %> - Port: <%= @port %> - Container: <%= @index %></h2>
 						<img src="https://lh6.googleusercontent.com/-b9BB0T8Cy-4/AAAAAAAAAAI/AAAAAAAAA9U/biLumWYc-MM/photo.jpg"></img>
 						<img src="https://pbs.twimg.com/media/D2vn0qmXgAE7HBA.jpg"></img>
 
