--- a/views/index.erb
+++ b/views/index.erb
@@ -20,7 +20,7 @@
 					<div class="innertube">
 						<h2>IP: <%= @host %> - Port: <%= @port %> - Container: <%= @index %></h2>
 						<img src="https://lh6.googleusercontent.com/-b9BB0T8Cy-4/AAAAAAAAAAI/AAAAAAAAA9U/biLumWYc-MM/photo.jpg"></img>
-						<img src="https://pbs.twimg.com/media/D2vn0qmXgAE7HBA.jpg"></img>
+						<img src="https://susecon20.mpeventapps.com/includes/images/theme/digi-header.png"></img>
 
 					</div>
 				</div>
