--- a/views/index.erb
+++ b/views/index.erb
@@ -20,7 +20,7 @@
 					<div class="innertube">
 						<h2>IP: <%= @host %> - Port: <%= @port %> - Container: <%= @index %></h2>
 						<img src="https://lh6.googleusercontent.com/-b9BB0T8Cy-4/AAAAAAAAAAI/AAAAAAAAA9U/biLumWYc-MM/photo.jpg"></img>
-						<img src="https://susecon20.mpeventapps.com/includes/images/theme/digi-header.png"></img>
+						<img src="https://mplay-cdn.s3.amazonaws.com/sites/susecon20/_uploads/images/SUSECON_Digital_Site_Graphics_Side_navigation_graphic_750x400.png"></img>
 
 					</div>
 				</div>
@@ -29,7 +29,7 @@
 
 		<footer id="footer">
 			<div class="innertube">
-				<p>SUSECON Nashville '19</p>
+				<p>SUSECON DIGITAL 2020</p>
 			</div>
 		</footer>
 
