--- a/views/index.erb
+++ b/views/index.erb
@@ -20,7 +20,7 @@
 					<div class="innertube">
 						<h2>IP: <%= @host %> - Port: <%= @port %> - Container: <%= @index %></h2>
 						<img src="https://lh6.googleusercontent.com/-b9BB0T8Cy-4/AAAAAAAAAAI/AAAAAAAAA9U/biLumWYc-MM/photo.jpg"></img>
-						<img src="https://pbs.twimg.com/media/D2vn0qmXgAE7HBA.jpg"></img>
+						<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRVWRZFsp7KwyHwUEVlLYrwdLQyfzxfN8Rw3I3SboT96bRhCZRY&usqp=CAU"></img>
 
 					</div>
 				</div>
@@ -29,7 +29,7 @@
 
 		<footer id="footer">
 			<div class="innertube">
-				<p>SUSECON Nashville '19</p>
+				<p>SUSECON Digital 2020</p>
 			</div>
 		</footer>
 
