--- a/views/index.erb
+++ b/views/index.erb
@@ -20,7 +20,7 @@
 					<div class="innertube">
 						<h2>IP: <%= @host %> - Port: <%= @port %> - Container: <%= @index %></h2>
 						<img src="https://lh6.googleusercontent.com/-b9BB0T8Cy-4/AAAAAAAAAAI/AAAAAAAAA9U/biLumWYc-MM/photo.jpg"></img>
-						<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRVWRZFsp7KwyHwUEVlLYrwdLQyfzxfN8Rw3I3SboT96bRhCZRY&usqp=CAU"></img>
+						<img src="https://mplay-cdn.s3.amazonaws.com/sites/susecon20/_uploads/images/SUSECON_Digital_Site_Graphics_Side_navigation_graphic_750x400.png"></img>
 
 					</div>
 				</div>
